--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Graphics::ColorNames::WWW
 
+1.13  Sat Dec 19 00:00:00 2009
+	- better documentation
+	- fix FAIL in t/11pod_cover.t
+
 1.12  Thu Dec 17 00:00:00 2009
 	- only use ASCII in POD, fixes FAILs with perl 5.6.x
 	- add examples in eg/
